--- a/themes/vanderwalProTheme/layouts/partials/script.html
+++ b/themes/vanderwalProTheme/layouts/partials/script.html
@@ -1,5 +1,5 @@
-<script src="{{ js/feather.min.js | absURL }}"></script>
-<script src="{{ js/bootstrap.bundle.min.js | absURL }}"></script>
+<script src="js/feather.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script>
   feather.replace()
 </script>
