--- a/themes/vanderwalProTheme/layouts/partials/script.html
+++ b/themes/vanderwalProTheme/layouts/partials/script.html
@@ -1,5 +1,5 @@
-<script src={{ relURL "js/feather.min.js" }}></script>
-<script src={{ relURL "js/bootstrap.bundle.min.js" }}></script>
+<script src={{ absURL "js/feather.min.js" }}></script>
+<script src={{ absURL "js/bootstrap.bundle.min.js" }}></script>
 <script>
   feather.replace()
 </script>
